# qdot-tools

./: Overview.md  ProjectHome.md
geom/: AUTHORS  Makefile.in  README  acinclude.m4  configure
geom/src/: Binary.cc  BinaryAlloy.cc  BinaryAlloy.h  Cigar.cc  Cigar.h  CommentH5.cc  CommonAnionTernary.cc  CommonAnionTernary.h  CommonCationTernary.h  Cone.cc  CoordsH5.cc  CoordsH5.h  Cylinder.h  Dome.cc  Ellipse.cc  Ellipsoid.h  EtchedLattice.cc  Hut.cc  Hut.h  IVec3.h  InputParser.cc  LatticeIndexingH5.cc  LatticeUtil.h  Lens.cc  Lens.h  Makefile.am  Makefile.in  Material.cc  Material.h  Nanostructure.h  NeighborsH5.cc  NeighborsH5.h  Pure.cc  Pure.h  RadialAlloy.cc  RandomNR.h  Ring.h  SpeciesH5.h  Sphere.cc  Sphere.h  (+5 more)
getema/: README  config.h.in  configure  configure.ac
getema/doc/: Makefile.am  Makefile.in
getema/src/: CommentH5.h  CompositionGrids.h  Grid.cc  Grid.h  GridFactory.cc  Makefile.in  NeighborsH5.cc  NeighborsH5.h  SpeciesH5.cc  SpeciesH5.h  Strain.h  StrainGrid.h  Stress.h  StressH5.cc  StressH5.h  StructH5.h  SuperCellH5.h  ZincBlendeEMA.cc  ZincBlendeEMA.h  ZincBlendeElasticity.cc
relax/: Makefile.in  aclocal.m4  configure  configure.ac
relax/doc/: Makefile.in
relax/src/: AtomicPotential.h  CellRelaxer.cc  CellRelaxer.h  CoordsH5.h  Forces.cc  InputParser.cc  InputParser.h  LatticeIndexingH5.cc  Makefile.am  Mat3.cc  Mat3.h  NeighborsH5.h  SpeciesH5.h  Spring.cc  StillWeb.cc  StillWeb.h  Stress.cc  Stress.h  StressH5.cc  StressH5.h  SuperCellH5.cc  SurfaceStress.cc  SurfaceStress.h  TestForce.cc  VFF.cc  main.cc
trunk/geom/: config.h.in  configure  configure.ac
trunk/geom/doc/: Makefile.in
trunk/geom/doc/etc/: Doxyfile
trunk/geom/src/: Binary.h  CommentH5.cc  CommentH5.h  CommonAnionLinear.cc  CommonAnionLinear.h  CommonCationTernary.cc  CommonCationTernary.h  Cone.h  CoordsH5.cc  Cylinder.cc  Dome.h  Ellipse.h  Ellipsoid.cc  EtchedLattice.h  InputParser.cc  InputParser.h  LatticeIndexingH5.cc  LatticeIndexingH5.h  LatticeUtil.cc  LongLens.cc  LongLens.h  Makefile.am  Makefile.in  Nanostructure.cc  NeighborsH5.cc  Pyramid.cc  Pyramid.h  RadialAlloy.h  RandomNR.cc  Reconstructor.cc  Reconstructor.h  Ring.cc  Ring.h  SpeciesH5.cc  StructH5.h  StructH5Writer.cc  StructH5Writer.h  Structure.cc  SuperCell.cc  SuperCell.h  (+5 more)
trunk/getema/: INSTALL  Makefile.am  Makefile.in  NEWS  acinclude.m4  configure.ac
trunk/getema/doc/etc/: Doxyfile  doc.css
trunk/getema/src/: CommentH5.cc  CompositionGrids.cc  CoordsH5.cc  CoordsH5.h  EMAModel.h  ElasticConstants.h  GridFactory.h  LatticeIndexingH5.cc  Makefile.am  Strain.cc  Strain.h  StrainFromStress.cc  StrainFromStress.h  Stress.cc  StressGrid.cc  StressGrid.h  SuperCellH5.cc  ZincBlendeEMA.cc  ZincBlendeEMA.h  ZincBlendeElasticity.cc  ZincBlendeElasticity.h  main.cc
trunk/relax/: Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure
trunk/relax/doc/: Makefile.am
trunk/relax/doc/etc/: Doxyfile
trunk/relax/src/: Checkpoint.cc  Checkpoint.h  ConjGrad.cc  ConjGrad.h  CoordsH5.cc  Forces.h  LatticeIndexingH5.cc  LatticeIndexingH5.h  Makefile.in  Minimize1D.cc  Minimize1D.h  NeighborsH5.cc  SpeciesH5.cc  Spring.h  StressH5.cc  SuperCellH5.h  SurfaceStress.cc  TestForce.h  TotalEnergy.cc  TotalEnergy.h  VFF.cc  VFF.h  XMLParser.cc  XMLParser.h  main.cc
wiki/: Overview.wiki
