bin_PROGRAMS = geom
geom_SOURCES = Binary.cc BinaryAlloy.cc Cigar.cc CommentH5.cc CommonAnionLinear.cc CommonAnionTernary.cc CommonCationTernary.cc Cone.cc CoordsH5.cc Cylinder.cc Dome.cc Ellipse.cc Ellipsoid.cc EtchedLattice.cc Hut.cc InputParser.cc LatticeIndexingH5.cc LatticeUtil.cc Lens.cc LongLens.cc Material.cc Nanostructure.cc NeighborsH5.cc Pure.cc Pyramid.cc RadialAlloy.cc RandomNR.cc Reconstructor.cc Ring.cc SpeciesH5.cc Sphere.cc StructH5Writer.cc Structure.cc SuperCell.cc SuperCellH5.cc Well.cc ZincBlende.cc geom.cc
noinst_HEADERS = Binary.h BinaryAlloy.h Cigar.h CommentH5.h CommonAnionLinear.h CommonAnionTernary.h CommonCationTernary.h Cone.h CoordsH5.h Cylinder.h Dome.h Ellipse.h Ellipsoid.h EtchedLattice.h Hut.h IVec3.h InputParser.h LatticeIndexingH5.h LatticeUtil.h Lens.h LongLens.h Material.h Nanostructure.h NeighborsH5.h Pure.h Pyramid.h RadialAlloy.h RandomNR.h Reconstructor.h Ring.h SpeciesH5.h Sphere.h StructH5.h StructH5Writer.h Structure.h SuperCell.h SuperCellH5.h Vec3.h Well.h ZincBlende.h 
