bin_PROGRAMS = getema
getema_SOURCES = CommentH5.cc CompositionGrids.cc CoordsH5.cc Grid.cc GridFactory.cc LatticeIndexingH5.cc NeighborsH5.cc SpeciesH5.cc Strain.cc StrainFromStress.cc Stress.cc StressGrid.cc StressH5.cc SuperCellH5.cc ZincBlendeEMA.cc ZincBlendeElasticity.cc main.cc
noinst_HEADERS = CommentH5.h CompositionGrids.h CoordsH5.h EMAModel.h ElasticConstants.h Grid.h GridFactory.h LatticeIndexingH5.h NeighborsH5.h SpeciesH5.h Strain.h StrainFromStress.h StrainGrid.h Stress.h StressGrid.h StressH5.h StructH5.h SuperCellH5.h ZincBlendeEMA.h ZincBlendeElasticity.h
